--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/food-service
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql: true
