--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/food-service
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql: true
+spring.security.user.name=root
+spring.security.user.password=root
