--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=root
 spring.jpa.show-sql: true
 spring.security.user.name=root
 spring.security.user.password=root
+spring.profiles.active=test
